fixed shifted format bug

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -9,8 +9,10 @@
 
 .headerBox {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   min-height: 100vh;
+  gap: 50vh
   
 }
 
@@ -21,7 +23,9 @@
   margin-top: 10%;
   gap: 1rem;
   z-index: 2;
+  min-width: 400px;
 }
+
 
 .meImg {
   transition: 2s;
@@ -42,8 +46,6 @@
 }
 
 .visible {
-  position: absolute;
-  top: 85%;
   display: flex;
   justify-content: center;
   z-index: 2;
@@ -55,6 +57,8 @@
   background-color: transparent;
   font-size: 20px;
   cursor: pointer;
+ 
+  
 }
 
 .visible:hover {
